--- a/CSS/container.css
+++ b/CSS/container.css
@@ -1,18 +1,14 @@
-
 .container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(5, 100px);
     grid-gap: 20px;
-    height: 400px;
-    border: 1px solid #ccc;
     margin: 20px;
-    padding: 20px;
-    grid-template-areas: ;
 }
-    
+
 .container__item {
     padding: 20px;
-    display: grid;
+    display: flex;
     align-items: center;
     justify-content: center;
     background-color: teal;
@@ -20,6 +16,5 @@
 }
 
 .container__item--last {
-    grid-area: 1 / 2 / span 3 / span 3;  
-
+    grid-area: 2 /  2 / span 2 / span 2; 
 }
